--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 	<!-- we will continue to use our style.css file for styling -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<i class="fa-solid fa-bars"></i>
 
 </head>
 
@@ -33,6 +34,7 @@
                 </li>
                 <li>
                   <a class="menu-link" href="#contact">Contact</a>
+									<li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
                 </li>
               </ul>
           </nav>
