--- a/about.html
+++ b/about.html
@@ -2,42 +2,40 @@
 <html lang"eng" dir"ltr">
 
 <head>
-	<meta charset="utf-8">
-	<!-- Setting the Viewport in HTML -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <!-- Setting the Viewport in HTML -->
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-	<title>UX/UI designer with background in industrial design</title>
-	<!-- add normalize below -->
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-	<!-- add custom font here -->
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-	<!-- we will continue to use our style.css file for styling -->
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<i class="fa-solid fa-bars"></i>
-
-</head>
+  <title>UX/UI designer with background in industrial design</title>
+  <!-- add normalize below -->
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <!-- add custom font here -->
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+  <!-- we will continue to use our style.css file for styling -->
+    <!--css stylesheet-->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <!--CDN code for fontawesome hamburger menu icon -->
+  <script src="https://kit.fontawesome.com/89081f1605.js" crossorigin="anonymous"></script>
+  </head>
 
 <body id="about-page">
-  <div>
       <header>
-          <!-- example navigation -->
-          <nav>
+          <!-- For the navigation -->
                   <div class="container">
-              <a href="index.html"> </a>
-              <img src="img/favicon.ico.jpg" class="logo" alt="Pranali Linge">
-              <ul class="navigation">
-                <li>
-                  <a class="menu-link" href="work.html">Work</a>
-                </li>
-                <li>
-                  <a class="menu-link" href="about.html">About</a>
-                </li>
-                <li>
-                  <a class="menu-link" href="#contact">Contact</a>
-									<li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
-                </li>
+                    <div class="navtoggle" id="myNavtoggle">
+                      <!-- Toggle for menu icon -->
+                      <img src="img/favicon.ico.jpg" class="logo" alt="Pranali Linge">
+            <nav>
+                <ul class="navigation">
+                  <li><a href="index.html">Projects</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+                  <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
+                  <!-- Hamburger menu icon -->
               </ul>
           </nav>
+        </div>
+      </div>
           <!-- example navigation end -->
       </header>
 
