updated images name

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang"eng" dir"ltr">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
@@ -41,7 +41,6 @@
 
   <Main>
     <div>
-    <div>
     <h1> about me</h1>
   </div>
     <div>
@@ -65,7 +64,7 @@ and brands that make a positive impact on people’s lives and make digital prod
 intuitive to use.
 Outside of work I spend my time taking photos, traveling, and designing wooden toys.
 I’m currently available for full-time work. If you want to say hi, please get in touch via pranaliplinge@gmail.com.</p>
-  <a href="files/Linge Pranali Resume.pdf" download>Download my Resume</a>
+<a href="files/lingepranaliresume.pdf" download> Download my CV </a>
 </div>
 <div>
   <h2>Skills and Tools</h2>
@@ -109,6 +108,7 @@ I’m currently available for full-time work. If you want to say hi, please get 
 				</ul>
 				<p>Copyright Pranali Linge 2022</p>
 			</div>
+    </div>
 	</footer>
 </body>
 </html>
