--- a/evermind.html
+++ b/evermind.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang"eng" dir"ltr">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
@@ -45,8 +45,8 @@
     </div>
     <div>
       <picture>
-        <source srcset="img/evermindbrief@1x.jpg" media="(max-width:767px)">
-        <img src="img/evermind/evermind_brief@1x.png" alt="Evermind">
+        <source srcset="img/evermindbrief.jpg" media="(max-width:767px)">
+        <img src="img/evermind/evermind_brief.png" alt="Evermind">
       </picture>
     </div>
     <div>
@@ -68,14 +68,16 @@
     <p>5 months </p>
     <h3>Tools </h3>
     <p>
+    <ul>
       <li>Figma</li>
       <li>Adobe illustrator</li>
       <li>Adobe photoshop</li>
+    </ul>
     <div>
       <h3>Process</h3>
       <picture>
-        <source srcset="img/evermind/evermind_process@1x.png" media="(max-width:767px)">
-        <img src="img/evermind/evermind_process@1x.png" alt="Evermind">
+        <source srcset="img/evermind/evermind_process.png" media="(max-width:767px)">
+        <img src="img/evermind/evermind_process@.png" alt="Evermind">
       </picture>
     </div>
     <h3>Competitive analysis</h3>
@@ -83,14 +85,15 @@
     <ul>
       <li> Talkspace</li>
       <li>Calm</li>
-
-      <source srcset="img/evermind/evermind_CA talkspace@1x.png" media="(max-width:767px)">
-      <img src="img/evermind/evermind_CA talkspace@1x.png" alt="Talkspace">
+    </ul>
+      <picture>
+      <source srcset="img/evermind/evermind_CA_talkspace.png" media="(max-width:767px)">
+      <img src="img/evermind/evermind_CA_talkspace.png" alt="Talkspace">
       </picture>
       <div>
         <picture>
-          <source srcset="img/evermind/evermind_CAcalm@1x.png" media="(max-width:767px)">
-          <img src="img/evermind/evermind_CAcalm@1x.png" alt="calm">
+          <source srcset="img/evermind/evermind_CAcalm.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_CAcalm.png" alt="calm">
         </picture>
       </div>
       <div>
@@ -107,8 +110,8 @@
           process I gained a deeper understanding of how emotions such as frustration or confusion
           could lead to decreased trust in the product or abandonment of a task altogether. </p>
         <picture>
-          <source srcset="img/evermind/evermind_userjourneymap@1x.png" media="(max-width:767px)">
-          <img src="img/evermind/evermind_userjourneymap@1x.png" alt="user journey map">
+          <source srcset="img/evermind/evermind_userjourneymap.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_userjourneymap.png" alt="user journey map">
         </picture>
       </div>
       <div>
@@ -118,10 +121,11 @@
           of the user flow it is possible to follow the users progress of a certain task through
           out a diagram. </p>
         <picture>
-          <source srcset="img/evermind/evermind_userflow@1x.png" media="(max-width:767px)">
-          <img src="img/evermind/evermind_userflow@1x.png" alt="userflow">
+          <source srcset="img/evermind/evermind_userflow.png" media="(max-width:767px)">
+          <img src="img/evermind/evermind_userflow@.png" alt="userflow">
         </picture>
       </div>
+
       <div>
         <h3> Information Architecture </h3>
         <p>The following is the sitemap based on the previously defined persona.
@@ -151,17 +155,17 @@
         <p>To further work on details of the application, I created mid-fedility wireframes.
           I expanded on my design with mid-fidelity wireframes by adding more screens as appropriate
           according to the logic of my user flows.
-          <p />
+        </p>
           <picture>
-            <source srcset="img/evermind/evermind_midfedility wireframes@1x.png" media="(max-width:767px)">
-            <img src="img/evermind/evermind_midfedility wireframes@1x.png" alt="low fedility wireframes">
+            <source srcset="img/evermind/evermind_midfedility_wireframes@1x.png" media="(max-width:767px)">
+            <img src="img/evermind/evermind_midfedility_wireframes@1x.png" alt="low fedility wireframes">
           </picture>
       </div>
       <div>
         <h3>Usability testing</h3>
         <p>As soon as I completed the design phase, I created a usability test plan and tested the
           app with real users to identify its strengths and weaknesses.
-          <p />
+        </p>
           <picture>
             <source srcset="img/evermind/evermind_usertesting@1x.png" media="(max-width:767px)">
             <img src="img/evermind/evermind_usertesting@1x.png" alt="Usability testing">
@@ -172,8 +176,8 @@
           with mindsoul for the first time on mobile.</p>
         <h3>A/B preference test </h3>
         <picture>
-          <source srcset="img/evermind/evermind_AB preference test@1x.png" media="(max-width:767px)">
-          <img src="iimg/evermind/evermind_AB preference test@1x.png" alt="A/B preference test">
+          <source srcset="img/evermind/evermindABpreferencetest@1x.png" media="(max-width:767px)">
+          <img src="img/evermind/evermindABpreferencetest@1x.png" alt="A/B preference test">
         </picture>
       </div>
       <div>
@@ -195,7 +199,6 @@
         <source srcset="img/evermind/evermind_conclusion@1x.png" media="(max-width:767px)">
         <img src="img/evermind/evermind_conclusion@1x.png" alt="Conclusion">
       </picture>
-      </div>
   </main>
 
   <footer>
@@ -226,6 +229,7 @@
         </ul>
         <p>Copyright Pranali Linge 2022</p>
       </div>
+    </div>
   </footer>
 </body>
 
